[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/LevelUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="pauseMenu" type="CanvasLayer" parent="."]

[node name="pauseText" type="Label" parent="pauseMenu"]
anchor_left = 0.797
anchor_right = 1.0
anchor_bottom = 0.069
margin_left = -713.16
margin_top = 197.0
margin_right = -293.0
margin_bottom = 247.32
rect_pivot_offset = Vector2( 257, 0 )
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resumeGameButton" type="Button" parent="pauseMenu"]
margin_left = 393.567
margin_top = 379.846
margin_right = 885.567
margin_bottom = 435.846
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goBackButton" type="Button" parent="pauseMenu"]
margin_left = 393.567
margin_top = 458.846
margin_right = 885.567
margin_bottom = 514.846
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
anchor_left = 0.797
anchor_right = 1.0
anchor_bottom = 0.069
margin_left = -423.16
margin_right = -3.0
margin_bottom = 0.319996
rect_pivot_offset = Vector2( 257, 0 )
custom_fonts/font = SubResource( 1 )
text = "Score:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bitcoins" type="Label" parent="score"]
anchor_left = 0.14
anchor_top = 0.88
anchor_right = 1.0
anchor_bottom = 1.58
margin_left = -214.2
margin_top = -3.8147e-06
margin_right = 36.0
margin_bottom = 15.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 714, 0 )
custom_fonts/font = SubResource( 2 )
text = "Bitcoins Earned:"
align = 2
valign = 1
autowrap = true

[node name="gunEquipped" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1288.0
margin_top = -55.0
margin_right = -6.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 3 )
align = 2
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gunPreview" type="Sprite" parent="gunEquipped"]
position = Vector2( 1183.55, -65.4786 )
scale = Vector2( 2.33286, 2.33286 )

[node name="bossHealth" type="Label" parent="."]
visible = false
margin_left = 7.3918
margin_top = 640.291
margin_right = 384.392
margin_bottom = 718.291
custom_fonts/font = SubResource( 4 )
text = "Boss:"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerHealth" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 385.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="virusesKilled" type="Label" parent="playerHealth"]
margin_left = -1.8901
margin_top = 45.7093
margin_right = 390.11
margin_bottom = 144.709
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 4 )
text = "Killed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gunsEquippedSlot1BG" type="ColorRect" parent="."]
margin_left = 499.0
margin_right = 579.0
margin_bottom = 48.0
color = Color( 1, 1, 1, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gunsEquippedSlot2BG" type="ColorRect" parent="."]
margin_left = 633.0
margin_right = 713.0
margin_bottom = 48.0
color = Color( 1, 1, 1, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gunsEquippedSlot1" type="Sprite" parent="."]
position = Vector2( 501, 0 )
centered = false

[node name="gunsEquippedSlot2" type="Sprite" parent="."]
position = Vector2( 635, 0 )
centered = false

[node name="selecting" type="Label" parent="."]
margin_left = -20.7656
margin_top = -31.4289
margin_right = 19.2344
margin_bottom = 18.5711
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selectingGuntoSub" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 50.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 1, 0.0901961, 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="whichOne" type="Label" parent="selectingGuntoSub"]
visible = false
margin_left = -534.0
margin_top = 10.0
margin_right = 520.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0392157, 1, 0, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discard" type="Label" parent="."]
visible = false
margin_left = 360.0
margin_top = 73.0
margin_right = 600.0
margin_bottom = 123.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="pauseMenu/resumeGameButton" to="." method="_on_resumeGameButton_pressed"]
[connection signal="pressed" from="pauseMenu/goBackButton" to="." method="_on_goBackButton_pressed"]
